--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>PokerNight</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+<html lang="en-US">
+<head>
+  <title>PokerNight</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
 
-  <body>
-    <nav class="bg-neutral-900">
-      <div class="h-16 mx-auto max-w-screen-xl flex items-center justify-between">
-        <%= link_to root_path do %>
-          <div class="flex gap-2 items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-teal-500">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            <h1 class="text-white font-bold tracking-wider text-lg font-quicksand">Phil&apos;s Poker Room</h1>
-          </div>
-        <% end %>
-        <!-- TODO: should be button_to with styles once devise is wired up -->
-        <button class="rounded px-4 py-1 font-outfit bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-300 hover:to-teal-300">Login</button>
+<body class="min-h-screen">
+<nav class="bg-neutral-900 mb-4 px-8 xl:px-0">
+  <div class="h-16 mx-auto max-w-screen-xl flex items-center justify-between">
+    <%= link_to root_path do %>
+      <div class="flex gap-2 items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-teal-500">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+        </svg>
+        <h1 class="text-white font-bold tracking-wider text-lg font-quicksand">Phil&apos;s Poker Room</h1>
       </div>
-    </nav>
-    <main class="container mx-auto max-w-screen-xl mt-8">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= yield %>
-    </main>
-  </body>
+    <% end %>
+    <%= link_to 'Log In', new_user_session_path, class: 'rounded px-4 py-1 font-outfit bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-300 hover:to-teal-300' %>
+  </div>
+</nav>
+<main class="container mx-auto max-w-screen-xl min-h-screen px-8 xl:px-0">
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  <%= yield %>
+</main>
+</body>
 </html>
