--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,22 @@
         </div>
       </div>
 
+      <div class="flex justify-between gap-4">
+        <div class="w-full">
+          <%= f.label :first_name, class: 'block text-sm font-medium leading-6 text-gray-900' %>
+          <div class="mt-2">
+            <%= f.text_field :first_name, autocomplete: "first-name", class: 'block w-full h-12 rounded-sm border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-teal-500 sm:text-sm sm:leading-6' %>
+          </div>
+        </div>
+
+        <div class="w-full">
+          <%= f.label :last_name, class: 'block text-sm font-medium leading-6 text-gray-900' %>
+          <div class="mt-2">
+            <%= f.text_field :last_name, autocomplete: "last-name", class: 'block w-full h-12 rounded-sm border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-teal-500 sm:text-sm sm:leading-6' %>
+          </div>
+        </div>
+      </div>
+
       <div>
         <%= f.label :password, class: 'block text-sm font-medium leading-6 text-gray-900' %>
         <div class="mt-2">
