create tailwind components for frequently used styles

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
-}
+    .input-text {
+        @apply block w-full h-12 rounded-sm border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-teal-500 sm:text-sm sm:leading-6
+    }
 
-*/
+    .input-label {
+        @apply block text-sm font-medium leading-6 text-gray-900
+    }
+
+    .btn {
+        @apply h-12 flex w-full justify-center rounded-sm px-3 py-1.5 text-sm text-gray-900 font-semibold leading-6 hover:cursor-pointer focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-teal-300
+    }
+
+    .btn-primary {
+        @apply bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-300 hover:to-teal-300
+    }
+
+    .link {
+        @apply text-sm font-bold text-teal-500 underline
+    }
+
+    .h2 {
+        @apply font-quicksand font-bold text-3xl text-center text-gray-900
+    }
+}
