--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,7 +12,7 @@
     }
 
     .btn {
-        @apply h-12 flex w-full justify-center rounded-sm px-3 py-1.5 text-sm text-gray-900 font-semibold leading-6 hover:cursor-pointer focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-teal-300
+        @apply flex justify-center rounded-sm px-3 py-1.5 text-sm text-gray-900 font-semibold leading-6 hover:cursor-pointer focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-teal-300
     }
 
     .btn-primary {
