--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <h1 class="text-white font-bold tracking-wider text-lg font-quicksand">Phil&apos;s Poker Room</h1>
       </div>
     <% end %>
-    <%= link_to 'Log In', new_user_session_path, class: 'rounded px-4 py-1 font-outfit bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-300 hover:to-teal-300' %>
+    <%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary' %>
   </div>
 </nav>
 <main class="container mx-auto max-w-screen-xl min-h-screen px-8 xl:px-0">
