--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -46,7 +46,7 @@
       </div>
 
       <div>
-        <%= f.submit "Sign up", class: 'btn btn-primary' %>
+        <%= f.submit "Sign up", class: 'btn btn-primary w-full' %>
       </div>
     <% end %>
     <div class="flex justify-center gap-2 mt-6">
