--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,16 @@
         role="menu"
       >
         <% if user_signed_in? %>
-          <%= link_to 'Settings', edit_user_registration_path, class: "block px-4 py-2 text-sm text-gray-900" %>
-          <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: "block px-4 py-2 text-sm text-gray-700" %>
+          <%= link_to edit_user_registration_path do %>
+            <div class="h-12 flex items-center rounded-md hover:bg-slate-100 px-4 py-2">
+              <span class="font-outfit block text-sm text-gray-900">Account Settings</span>
+            </div>
+          <% end %>
+          <%= link_to destroy_user_session_path, data: { turbo_method: :delete } do %>
+            <div class="h-12 flex items-center rounded-md hover:bg-slate-100 px-4 py-2">
+              <span class="font-outfit block text-sm text-gray-900">Log Out</span>
+            </div>
+          <% end %>
         <% else %>
           <%= link_to new_user_registration_path do %>
             <div class="h-12 flex items-center rounded-md hover:bg-slate-100 px-4 py-2">
