update edit profile view styles

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,27 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="h2 text-left">Account Settings</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
+  <div>
+    <%= f.label :email, class: "input-label" %>
+    <%= f.email_field :email, disabled: true, class: "input-text" %>
+  </div>
+  <div>
+    <%= f.label :current_password, class: "input-label" %>
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "input-text" %>
+  </div>
+  <div>
+    <%= f.label :password, "New Password", class: "input-label" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "input-text" %>
+  </div>
+  <div>
+    <%= f.label :password_confirmation, "Confirm New Password", class: "input-label" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input-text" %>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div>
+    <%= f.submit "Save", class: "btn btn-primary h-12 w-32" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+<div class="mt-4"><%= link_to "Delete my account", registration_path(resource_name), class: "link", data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
