--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,22 +3,18 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
   <div>
     <%= f.label :email, class: "input-label" %>
-    <%= f.email_field :email, disabled: true, class: "input-text" %>
+    <%= f.email_field :email, class: "input-text" %>
   </div>
-  <div>
-    <%= f.label :current_password, class: "input-label" %>
-    <%= f.password_field :current_password, autocomplete: "current-password", class: "input-text" %>
+  <div class="flex gap-4">
+    <div class="w-full">
+      <%= f.label :first_name, class: "input-label" %>
+      <%= f.text_field :first_name, class: "input-text" %>
+    </div>
+    <div class="w-full">
+      <%= f.label :last_name, class: "input-label" %>
+      <%= f.text_field :last_name, class: "input-text" %>
+    </div>
   </div>
-  <div>
-    <%= f.label :password, "New Password", class: "input-label" %>
-    <%= f.password_field :password, autocomplete: "new-password", class: "input-text" %>
-  </div>
-  <div>
-    <%= f.label :password_confirmation, "Confirm New Password", class: "input-label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input-text" %>
-  </div>
-
-
   <div>
     <%= f.submit "Save", class: "btn btn-primary h-12 w-32" %>
   </div>
