--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,16 +3,22 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
   <div>
     <%= f.label :email, class: "input-label" %>
-    <%= f.email_field :email, class: "input-text" %>
+    <div class="mt-2">
+      <%= f.email_field :email, class: "input-text" %>
+    </div>
   </div>
   <div class="flex gap-4">
     <div class="w-full">
       <%= f.label :first_name, class: "input-label" %>
-      <%= f.text_field :first_name, class: "input-text" %>
+      <div class="mt-2">
+        <%= f.text_field :first_name, class: "input-text" %>
+      </div>
     </div>
     <div class="w-full">
       <%= f.label :last_name, class: "input-label" %>
-      <%= f.text_field :last_name, class: "input-text" %>
+      <div class="mt-2">
+        <%= f.text_field :last_name, class: "input-text" %>
+      </div>
     </div>
   </div>
   <div>
