--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,6 +7,10 @@
         @apply block w-full h-12 rounded-sm border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-teal-500 sm:text-sm sm:leading-6
     }
 
+    .input-text-disabled {
+        @apply bg-slate-200 text-gray-700
+    }
+
     .input-label {
         @apply block text-sm font-medium leading-6 text-gray-900
     }
