--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,20 +27,29 @@
     <div>
       <%= f.label :email, class: "input-label" %>
       <div class="mt-2">
-        <%= f.email_field :email, class: "input-text" %>
+        <%= f.email_field :email,
+                          "data-user-registration-edit-target": "emailInput",
+                          disabled: true,
+                          class: "input-text input-text-disabled" %>
       </div>
     </div>
     <div class="flex gap-4">
       <div class="w-full">
         <%= f.label :first_name, class: "input-label" %>
         <div class="mt-2">
-          <%= f.text_field :first_name, class: "input-text" %>
+          <%= f.text_field :first_name,
+                           "data-user-registration-edit-target": "firstNameInput",
+                           disabled: true,
+                           class: "input-text input-text-disabled" %>
         </div>
       </div>
       <div class="w-full">
         <%= f.label :last_name, class: "input-label" %>
         <div class="mt-2">
-          <%= f.text_field :last_name, class: "input-text" %>
+          <%= f.text_field :last_name,
+                           "data-user-registration-edit-target": "lastNameInput",
+                           disabled: true,
+                           class: "input-text input-text-disabled" %>
         </div>
       </div>
     </div>
