--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
           Edit Profile
         </button>
         <button
-          type="button"
+          type="reset"
           data-action="click->user-registration-edit#toggleIsEditable"
           data-user-registration-edit-target="cancelBtn"
           class="btn btn-primary h-10 w-28 items-center hidden"
