--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
           type="reset"
           data-action="click->user-registration-edit#toggleIsEditable"
           data-user-registration-edit-target="cancelBtn"
-          class="btn btn-primary h-10 w-28 items-center hidden"
+          class="btn btn-secondary h-10 w-28 items-center hidden"
         >
           Cancel
         </button>
