--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -36,6 +36,6 @@
     }
 
     .h2 {
-        @apply font-quicksand font-bold text-xl md:text-3xl text-center text-gray-900
+        @apply font-quicksand font-bold text-2xl md:text-3xl text-center text-gray-900
     }
 }
