--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body class="min-h-screen bg-slate-50">
 <%= render 'shared/navbar' %>
-<main class="container mx-auto max-w-screen-xl min-h-screen px-8 xl:px-0">
+<main class="container mx-auto max-w-screen-xl min-h-screen px-8 md:px-0 md:max-w-3xl">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
