--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="bg-neutral-900 mb-4 px-8 xl:px-0" data-controller="navbar">
-  <div class="h-16 mx-auto max-w-screen-xl flex items-center justify-between">
+<nav class="bg-neutral-900 mb-4 px-8 md:px-0" data-controller="navbar">
+  <div class="h-16 mx-auto max-w-screen-xl flex items-center justify-between md:max-w-3xl">
     <%= link_to root_path do %>
       <div class="flex gap-2 items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="h-5 w-5 fill-teal-500" viewBox="0 0 16 16">
