--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,16 +1,16 @@
 <div data-controller="user-registration-edit">
+  <div class="mb-6 h-10 flex justify-between items-center">
+    <h2 class="h2 text-left">Account Settings</h2>
+    <button
+      type="button"
+      data-action="click->user-registration-edit#toggleIsEditable"
+      data-user-registration-edit-target="editBtn"
+      class="btn btn-primary h-10 items-center rounded-3xl"
+    >
+      Edit Profile
+    </button>
+  </div>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
-    <div class="h-10 flex justify-between items-center">
-      <h2 class="h2 text-left">Account Settings</h2>
-      <button
-        type="button"
-        data-action="click->user-registration-edit#toggleIsEditable"
-        data-user-registration-edit-target="editBtn"
-        class="btn btn-primary h-10 items-center rounded-3xl"
-      >
-        Edit Profile
-      </button>
-    </div>
     <div>
       <%= f.label :email, class: "input-label" %>
       <div class="mt-2">
