--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,13 +1,15 @@
-<div data-controller="user-registration-edit">
-  <div class="mb-6 h-10 flex justify-between items-center">
+<div data-controller="user-registration-edit" class="mt-8">
+  <div class="mb-10 h-12 flex justify-between items-center">
     <h2 class="h2 text-left">Account Settings</h2>
     <button
       type="button"
       data-action="click->user-registration-edit#toggleIsEditable"
       data-user-registration-edit-target="editBtn"
-      class="btn btn-primary h-10 items-center rounded-3xl"
+      class="p-2 rounded-full hover:bg-slate-200"
     >
-      Edit Profile
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-emerald-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"/>
+      </svg>
     </button>
   </div>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
