--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -7,13 +7,13 @@
     </div>
   </div>
   <div>
-    <%= f.label :password, class: "input-label" %>
+    <%= f.label :password, "New Password", class: "input-label" %>
     <div class="mt-2">
       <%= f.password_field :password, class: "input-text" %>
     </div>
   </div>
   <div>
-    <%= f.label :password_confirmation, class: "input-label" %>
+    <%= f.label :password_confirmation, "Confirm New Password", class: "input-label" %>
     <div class="mt-2">
       <%= f.password_field :password_confirmation, class: "input-text" %>
     </div>
