use single column layout on mobile for user edit form

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="user-registration-edit" class="mt-8">
+<div data-controller="user-registration-edit" class="mt-6">
   <div class="mb-10 h-12 flex justify-between items-center">
     <h2 class="h2 text-left">Account Settings</h2>
     <button
@@ -22,7 +22,7 @@
                           class: "input-text input-text-disabled" %>
       </div>
     </div>
-    <div class="flex gap-4">
+    <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:gap-4">
       <div class="w-full">
         <%= f.label :first_name, class: "input-label" %>
         <div class="mt-2">
