--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
   <%= javascript_importmap_tags %>
 </head>
 <body class="min-h-screen bg-slate-50">
-<%= render 'shared/navbar' %>
+<%= render "shared/navbar" %>
 <main class="container mx-auto max-w-screen-xl min-h-screen px-8 md:px-0 md:max-w-3xl">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+  <%= turbo_frame_tag "modal" %>
   <%= yield %>
 </main>
 </body>
