--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,36 @@
-<%= form_for :user, url: passwords_path, html: { method: :put, class: "space-y-6" } do |f| %>
-  <h2 class="h2 text-left">Change Password</h2>
-  <div>
-    <%= f.label :current_password, class: "input-label" %>
-    <div class="mt-2">
-      <%= f.password_field :current_password, class: "input-text" %>
+<%= turbo_frame_tag "modal" do %>
+  <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+    <div class="fixed inset-0 bg-slate-500 bg-opacity-80 transition-opacity"></div>
+    <div class="fixed inset-0 z-10 overflow-y-auto">
+      <div class="flex justify-center p-4 text-center sm:items-center sm:p-0">
+        <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all my-8 w-full max-w-3xl p-4">
+          <h2 class="h2 text-left">Change Password</h2>
+          <%= form_for :user, url: passwords_path, html: { method: :put, class: "space-y-6" } do |f| %>
+            <div>
+              <%= f.label :current_password, class: "input-label" %>
+              <div class="mt-2">
+                <%= f.password_field :current_password, class: "input-text" %>
+              </div>
+            </div>
+            <div>
+              <%= f.label :password, "New Password", class: "input-label" %>
+              <div class="mt-2">
+                <%= f.password_field :password, class: "input-text" %>
+              </div>
+            </div>
+            <div>
+              <%= f.label :password_confirmation, "Confirm New Password", class: "input-label" %>
+              <div class="mt-2">
+                <%= f.password_field :password_confirmation, class: "input-text" %>
+              </div>
+            </div>
+            <div class="flex flex-col gap-4">
+              <%= f.submit "Save", class: "btn btn-primary w-full h-12" %>
+              <%= link_to "Cancel", edit_user_registration_path, class: "btn btn-secondary w-full h-12 items-center" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-  </div>
-  <div>
-    <%= f.label :password, "New Password", class: "input-label" %>
-    <div class="mt-2">
-      <%= f.password_field :password, class: "input-text" %>
-    </div>
-  </div>
-  <div>
-    <%= f.label :password_confirmation, "Confirm New Password", class: "input-label" %>
-    <div class="mt-2">
-      <%= f.password_field :password_confirmation, class: "input-text" %>
-    </div>
-  </div>
-  <div class="flex flex-col gap-4">
-    <%= f.submit "Save", class: "btn btn-primary w-full h-12" %>
-    <%= link_to "Cancel", edit_user_registration_path, class: "btn btn-secondary w-full h-12 items-center" %>
   </div>
 <% end %>
