--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -55,7 +55,7 @@
     </div>
   <% end %>
   <div data-user-registration-edit-target="actionBtnContainer" class="mt-10 flex flex-col gap-5">
-    <%= link_to "Change Password", edit_passwords_path, class: "btn btn-primary h-12 w-full items-center" %>
+    <%= link_to "Change Password", edit_passwords_path, class: "btn btn-primary h-12 w-full items-center", data: { turbo_frame: "modal" } %>
     <%= link_to "Delete my account", registration_path(resource_name), class: "btn btn-danger h-12 w-full items-center", data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %>
   </div>
 </div>
