--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "modal" do %>
-  <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+  <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true" data-controller="modal" data-modal-target="modal">
     <div class="fixed inset-0 bg-slate-500 bg-opacity-80 transition-opacity"></div>
     <div class="fixed inset-0 z-10 overflow-y-auto">
       <div class="flex justify-center p-4 text-center sm:items-center sm:p-0">
@@ -26,7 +26,13 @@
             </div>
             <div class="flex flex-col gap-4">
               <%= f.submit "Save", class: "btn btn-primary w-full h-12" %>
-              <%= link_to "Cancel", edit_user_registration_path, class: "btn btn-secondary w-full h-12 items-center" %>
+              <button
+                type="button"
+                data-action="click->modal#hideModal"
+                class="btn btn-secondary w-full h-12 items-center"
+              >
+                Cancel
+              </button>
             </div>
           <% end %>
         </div>
