hide modal when user clicks outside of the modal

--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="fixed inset-0 bg-slate-500 bg-opacity-80 transition-opacity"></div>
     <div class="fixed inset-0 z-10 overflow-y-auto">
       <div class="flex justify-center p-4 text-center sm:items-center sm:p-0">
-        <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all my-8 w-full max-w-3xl p-4">
+        <div data-modal-target="modalContent" class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all my-8 w-full max-w-3xl p-4">
           <h2 class="h2 text-left">Change Password</h2>
           <%= form_for :user, url: passwords_path, html: { method: :put, class: "space-y-6" } do |f| %>
             <div>
