use better layout for new registration page on mobile

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,7 +14,7 @@
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input-text' %>
         </div>
       </div>
-      <div class="flex justify-between gap-4">
+      <div class="flex flex-col justify-between space-y-6 md:space-y-0 md:flex-row md:gap-4">
         <div class="w-full">
           <%= f.label :first_name, class: 'input-label' %>
           <div class="mt-2">
