use better password confirm label for new registrations

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div>
-        <%= f.label :password_confirmation, class: 'input-label' %>
+        <%= f.label :password_confirmation, "Confirm Password", class: 'input-label' %>
         <div class="mt-2">
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input-text' %>
         </div>
