--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <main>
   <%= render "shared/toast" %>
 
-  <div class="container mx-auto max-w-screen-xl min-h-screen px-8 md:px-0 md:max-w-3xl">
+  <div class="container mx-auto max-w-screen-xl px-8 md:px-0 md:max-w-3xl">
     <%= yield %>
   </div>
 
