add slide transition to flash toast

--- a/app/views/shared/_toast.html.erb
+++ b/app/views/shared/_toast.html.erb
@@ -1,5 +1,15 @@
 <% if flash.any? %>
-  <div class="fixed w-full flex items-center justify-center bottom-5" data-controller="toast" data-toast-target="toast">
+  <div
+    data-controller="toast"
+    data-toast-target="toast"
+    class="fixed w-full flex items-center justify-center bottom-5 transition-all"
+    data-transition-enter-active="transition ease-in-out duration-300"
+    data-transition-enter-from="transform translate-y-full"
+    data-transition-enter-to="transform translate-y-0"
+    data-transition-leave-active="transition ease-in-out duration-200"
+    data-transition-leave-from="transform translate-y-0"
+    data-transition-leave-to="transform translate-y-full"
+  >
     <div class="flex items-center justify-between w-full max-w-xs px-4 py-2 text-gray-700 bg-white rounded-lg shadow-xl border border-gray-200 border-solid" role="alert">
       <div class="flex items-center gap-2">
         <% if flash[:notice] %>
