--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -2,15 +2,15 @@
 
 <%= form_for @result, html: { class: "space-y-6" } do |f| %>
   <div>
-    <%= f.label :buy_in_amount_cents, class: "input-label" %>
+    <%= f.label :buy_in_amount, class: "input-label" %>
     <div class="relative mt-2">
-      <%= f.number_field :buy_in_amount_cents, class: "input-text" %>
+      <%= f.number_field :buy_in_amount, class: "input-text" %>
     </div>
   </div>
   <div>
-    <%= f.label :win_amount_cents, class: "input-label" %>
+    <%= f.label :win_amount, class: "input-label" %>
     <div class="mt-2">
-      <%= f.number_field :win_amount_cents, class: "input-text" %>
+      <%= f.number_field :win_amount, class: "input-text" %>
     </div>
   </div>
   <div>
