--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -1,19 +1,21 @@
-<h2 class="h2">Add New Results</h2>
+<div data-controller="results-form">
+  <h2 class="h2">Add New Results</h2>
+  <%= form_for @result, html: { class: "space-y-6" } do |f| %>
+    <div>
+      <%= f.label :buy_in_amount, class: "input-label" %>
+      <div class="relative mt-2">
+        <%= f.number_field :buy_in_amount, class: "input-text", min: 0, step: 0.05, data: { results_form_target: "buyInAmountInput" } %>
+      </div>
+    </div>
+    <div>
+      <%= f.label :win_amount, class: "input-label" %>
+      <div class="mt-2">
+        <%= f.number_field :win_amount, class: "input-text", min: 0, step: 0.05, data: { results_form_target: "winAmountInput" } %>
+      </div>
+    </div>
+    <div>
+      <%= f.submit "Add Result", class: 'btn btn-primary w-full h-12' %>
+    </div>
+  <% end %>
+</div>
 
-<%= form_for @result, html: { class: "space-y-6" } do |f| %>
-  <div>
-    <%= f.label :buy_in_amount, class: "input-label" %>
-    <div class="relative mt-2">
-      <%= f.number_field :buy_in_amount, class: "input-text" %>
-    </div>
-  </div>
-  <div>
-    <%= f.label :win_amount, class: "input-label" %>
-    <div class="mt-2">
-      <%= f.number_field :win_amount, class: "input-text" %>
-    </div>
-  </div>
-  <div>
-    <%= f.submit "Add Result", class: 'btn btn-primary w-full h-12' %>
-  </div>
-<% end %>
