--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -11,7 +11,7 @@
         <%= user.first_name %>
       </p>
       <p class="font-semibold text-slate-600">
-        $45.25 TODO
+        <%= user.total_winnings_cents %>
       </p>
     </div>
   <% end %>
