--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -6,12 +6,12 @@
 </div>
 <div class="mt-10 flex flex-col gap-4">
   <% @users.each do |user| %>
-    <div class="px-4 py-6 flex justify-between items-center rounded-lg border-2 border-emerald-400">
-      <p>
+    <div class="h-20 px-4 flex justify-between items-center bg-gradient-to-r from-cyan-50 to-sky-50 rounded-lg border border-emerald-400">
+      <p class="font-semibold text-slate-700 text-md">
         <%= user.first_name %>
       </p>
-      <p class="font-semibold text-slate-600">
-        <%= user.total_winnings_cents %>
+      <p class="text-slate-700">
+        <%= user.total_winnings %>
       </p>
     </div>
   <% end %>
