add more space between error messages and fields on results form

--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -9,7 +9,7 @@
         </svg>
         <%= f.number_field :buy_in_amount, class: "input-text pl-6 #{@result.errors[:buy_in_amount].any? && "ring-red-500"}", placeholder: "0.00", step: 0.05, data: { results__form_target: "buyInAmountInput" } %>
         <% if @result.errors[:buy_in_amount].any? %>
-          <p class="text-sm text-red-600">
+          <p class="mt-1 text-sm text-red-600">
             <%= @result.errors[:buy_in_amount].first %>
           </p>
         <% end %>
@@ -23,7 +23,7 @@
         </svg>
         <%= f.number_field :win_amount, class: "input-text pl-6 #{@result.errors[:win_amount].any? && "ring-red-500"}", placeholder: "0.00", step: 0.05, data: { results__form_target: "winAmountInput" } %>
         <% if @result.errors[:win_amount].any? %>
-          <p class="text-sm text-red-600">
+          <p class="mt-1 text-sm text-red-600">
             <%= @result.errors[:win_amount].first %>
           </p>
         <% end %>
