--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -1,37 +1,17 @@
-<div data-controller="results--form">
-  <h2 class="h2">Add New Results</h2>
-  <%= form_for @result, html: { class: "space-y-6" } do |f| %>
-    <div>
-      <%= f.label :buy_in_amount, class: "input-label" %>
-      <div class="relative mt-2">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="absolute top-4 left-2 fill-slate-600" viewBox="0 0 16 16">
-          <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-        </svg>
-        <%= f.number_field :buy_in_amount, class: "input-text pl-6 #{@result.errors[:buy_in_amount].any? && "ring-red-500"}", placeholder: "0.00", step: 0.05, data: { results__form_target: "buyInAmountInput" } %>
-        <% if @result.errors[:buy_in_amount].any? %>
-          <p class="mt-1 text-sm text-red-600">
-            <%= @result.errors[:buy_in_amount].first %>
-          </p>
-        <% end %>
-      </div>
-    </div>
-    <div>
-      <%= f.label :win_amount, class: "input-label" %>
-      <div class="relative mt-2">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="absolute top-4 left-2 fill-slate-600" viewBox="0 0 16 16">
-          <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-        </svg>
-        <%= f.number_field :win_amount, class: "input-text pl-6 #{@result.errors[:win_amount].any? && "ring-red-500"}", placeholder: "0.00", step: 0.05, data: { results__form_target: "winAmountInput" } %>
-        <% if @result.errors[:win_amount].any? %>
-          <p class="mt-1 text-sm text-red-600">
-            <%= @result.errors[:win_amount].first %>
-          </p>
-        <% end %>
-      </div>
-    </div>
-    <div>
-      <%= f.submit "Add Result", class: 'btn btn-primary w-full h-12' %>
-    </div>
-  <% end %>
-</div>
+<h2 class="h2">Add New Results</h2>
+<%= form_for @result, html: { class: "space-y-6" } do |f| %>
+  <%= render CurrencyInput::Component.new(
+    form: f,
+    input_name: :buy_in_amount,
+    errors: @result.errors[:buy_in_amount]
+  ) %>
+  <%= render CurrencyInput::Component.new(
+    form: f,
+    input_name: :win_amount,
+    errors: @result.errors[:win_amount]
+  ) %>
+  <div>
+    <%= f.submit "Add Result", class: 'btn btn-primary w-full h-12' %>
+  </div>
+<% end %>
 
