--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -15,18 +15,14 @@
         </div>
       </div>
       <div class="flex flex-col justify-between space-y-6 md:space-y-0 md:flex-row md:gap-4">
-        <div class="w-full">
-          <%= f.label :first_name, class: 'input-label' %>
-          <div class="mt-2">
-            <%= f.text_field :first_name, autocomplete: "first-name", class: 'input-text' %>
-          </div>
-        </div>
-        <div class="w-full">
-          <%= f.label :last_name, class: 'input-label' %>
-          <div class="mt-2">
-            <%= f.text_field :last_name, autocomplete: "last-name", class: 'input-text' %>
-          </div>
-        </div>
+        <%= render TextField::Component.new(
+          form: f,
+          input_name: :first_name
+        ) %>
+        <%= render TextField::Component.new(
+          form: f,
+          input_name: :last_name
+        ) %>
       </div>
       <div>
         <%= f.label :password, class: 'input-label' %>
