--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -23,24 +23,18 @@
       </div>
     </div>
     <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:gap-4">
-      <div class="w-full">
-        <%= f.label :first_name, class: "input-label" %>
-        <div class="mt-2">
-          <%= f.text_field :first_name,
-                           "data-user-registration-edit-target": "firstNameInput",
-                           disabled: true,
-                           class: "input-text input-text-disabled" %>
-        </div>
-      </div>
-      <div class="w-full">
-        <%= f.label :last_name, class: "input-label" %>
-        <div class="mt-2">
-          <%= f.text_field :last_name,
-                           "data-user-registration-edit-target": "lastNameInput",
-                           disabled: true,
-                           class: "input-text input-text-disabled" %>
-        </div>
-      </div>
+      <%= render TextField::Component.new(
+        form: f,
+        input_name: :first_name,
+        input_data: { user_registration_edit_target: "firstNameInput" },
+        disabled: true
+      ) %>
+      <%= render TextField::Component.new(
+        form: f,
+        input_name: :last_name,
+        input_data: { user_registration_edit_target: "lastNameInput" },
+        disabled: true
+      ) %>
     </div>
     <div data-user-registration-edit-target="editBtnContainer" class="pt-4 flex flex-col gap-5 hidden">
       <%= f.submit "Save Profile",
