--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -8,12 +8,10 @@
   <div class="mt-8 mx-auto w-full max-w-sm">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'space-y-6' }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-      <div>
-        <%= f.label :email, class: 'block text-sm font-medium leading-6 text-gray-900' %>
-        <div class="mt-2">
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input-text' %>
-        </div>
-      </div>
+      <%= render EmailField::Component.new(
+        form: f,
+        input_name: :email
+      ) %>
       <div class="flex flex-col justify-between space-y-6 md:space-y-0 md:flex-row md:gap-4">
         <%= render TextField::Component.new(
           form: f,
