--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -13,20 +13,20 @@
     </button>
   </div>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
-    <%= render EmailField::Component.new(
+    <%= render FormComponents::EmailField::Component.new(
       form: f,
       input_name: :email,
       input_data: { user_registration_edit_target: "emailInput" },
       disabled: true
     ) %>
     <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:gap-4">
-      <%= render TextField::Component.new(
+      <%= render FormComponents::TextField::Component.new(
         form: f,
         input_name: :first_name,
         input_data: { user_registration_edit_target: "firstNameInput" },
         disabled: true
       ) %>
-      <%= render TextField::Component.new(
+      <%= render FormComponents::TextField::Component.new(
         form: f,
         input_name: :last_name,
         input_data: { user_registration_edit_target: "lastNameInput" },
