--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -16,7 +16,7 @@
     <%= render FormComponents::EmailField::Component.new(
       form: f,
       input_name: :email,
-      input_data: { user_registration_edit_target: "emailInput" },
+      input_data_attrs: { user_registration_edit_target: "emailInput" },
       disabled: true
     ) %>
     <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:gap-4">
